# internal/controller/api/api.spec.json
@@ -727,6 +727,12 @@
           },
           "dispatchers": {
             "type": "object"
+          },
+          "canonical_facts": {
+            "type": "object"
+          },
+          "tags": {
+            "type": "object"
           }
         }
       },
